Added more features to the nodes, to normalize size and speed and make color inherited.
Added couter for kills and children aswell as number of active nodes.

--- a/style/main.css
+++ b/style/main.css
@@ -3,10 +3,10 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  background: #222;
+  background: rgb(12, 9, 14);
 }
 #scene {
-  width: 99vw;
-  height: 99vh;
+  width: 100vw;
+  height: 100vh;
   z-index: 3;
 }
